<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llvMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvPleaseEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvPleaseEnter"
        android:textAlignment="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etGuess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/etGuessHint"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btGuess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btGuess" />

    <TextView
        android:id="@+id/tvGuessCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvGuessCount"
        android:textAlignment="center" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvAnsverLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12sp"
        android:background="#F44336"
        android:gravity="center_horizontal"
        android:padding="6sp">

        <TextView
            android:id="@+id/tvAnsverLine1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tvAnsverLine1"
            android:textAlignment="center"
            android:textColor="#4CAF50"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/tvAnsverLine2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tvAnsverLine2Start"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>